@@ -11,4 +11,11 @@ fv pages_contents new-page_title 'different page name'
 fv pages_contents task|new-page|update 'Save'
 submit
 find 'different page name'
+
 follow Delete
+url ${base_url}/projects/${projname}/delete-form
+find new-page
+fv confirm-delete delete delete
+submit
+url ${base_url}/projects/${projname}/contents
+notfind 'different page name'
